tests/fail_copy_without_share.rte
var x = write (new 42);
var y = x; // error: read privilege requires no writers
x := 0;
return *y;